# hs-disappoint

./: LICENSE  README  disappoint.cabal
src/: Pointfree.hs
src/Language/Haskell/: Pointfree.hs
src/Language/Haskell/Pointfree/: Common.hs  Optimize.hs  Parser.hs  PrettyPrinter.hs  Rules.hs  Transform.hs
