name:                disappoint
version:             0.1.0
synopsis:            Pointfree refactoring library
description:
    Disappoint turns the stand-alone command-line pointfree package into a
    library. I can't think of why anyone else would ever need this package, but
    here it is.
license:             OtherLicense
license-file:        LICENSE
category:            Tool
build-depends:       base, parsec, mtl, containers, array
build-type:          Simple
Exposed-modules: 
    Language.Haskell.Pointfree,
    Language.Haskell.Pointfree.Common,
    Language.Haskell.Pointfree.Optimize,
    Language.Haskell.Pointfree.Parser,
    Language.Haskell.Pointfree.PrettyPrinter,
    Language.Haskell.Pointfree.Rules,
    Language.Haskell.Pointfree.Transform
ghc-options:         -Wall -funbox-strict-fields -fglasgow-exts
hs-source-dirs:      src
